# app/Http/Requests/Auth/UpdateAgentRequest.php
@@ -17,6 +17,7 @@ class UpdateAgentRequest extends ApiFormRequest
 
         return [
             'name' => ['sometimes', 'string', 'max:255'],
+            'first_name' => ['sometimes', 'string', 'max:255'],
             'role' => ['sometimes', 'string', 'in:AGENT,RESPONSABLE_DE_VALIDATION,MANAGER,AUDITEUR'],
             'phonenumber' => ['sometimes', 'string', 'max:15'],
             'npi' => ['sometimes', 'string', 'max:10', 'unique:users,npi,'.$userId],
